@@ -945,6 +945,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Description = P\u015
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by = P\u0159\u00edr\u016fstek po
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer = Vybrat geoprvky pouze z jedn\u00e9 vrstvy
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only = Pouze pro vybran\u00e9 geoprvky
+#T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute = Zdrojov\u00fd atribut
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute = C\u00edlov\u00fd atribut
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.A-new-layer-will-be-created-for-the-results = Pro v\u00FDsledky bude vytvo\u0159ena nov\u00E1 vrstva.
