@@ -944,6 +944,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.From-source-descript
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by = Schrittweite / Erh\u00f6hen um
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer = Auswahl eines Objektes von nur einer Ebene
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only = Nur f\u00fcr ausgew\u00e4hlte Objekte
+#T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute = Ausgangs-Attribut
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute = Ziel-Attribut
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = Verbinden von Linien
