@@ -945,6 +945,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Description = \u4ed6
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by = \u5897\u5206
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer = \u305f\u3063\u305f\u4e00\u3064\u306e\u30ec\u30a4\u30e4\u306e\u30d5\u30a3\u30fc\u30c1\u30e3\u306e\u9078\u629e
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only = \u9078\u629e\u30d5\u30a3\u30fc\u30c1\u30e3\u306e\u307f
+#T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute = \u5143\u306e\u5c5e\u6027
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute = \u4ee3\u5165\u5148\u306e\u5c5e\u6027
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = \u30e9\u30a4\u30f3\u3092\u878d\u5408\u3059\u308b
