@@ -945,6 +945,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Description = Atribu
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by = Incremento de
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer = Selecionar fei\u00e7\u00f5es em apenas um layer
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only = Selecionar apenas fei\u00e7\u00f5es
+#T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute = Atributo fonte
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute = Atributo de destino
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = Misturar linhas
