@@ -945,6 +945,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Description = \u5206
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by = \u9012\u589e
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer = \u9009\u62e9\u529f\u80fd\u53ea\u5728\u4e00\u4e2a\u5c42
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only = \u9009\u62e9\u529f\u80fd\u53ea
+#T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute = Source\u5c5e\u6027
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute = \u76ee\u6807\u5c5e\u6027
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = \u6df7\u5408\u7ebf\u8def
