@@ -945,6 +945,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Description = \u5206
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by = \u905e\u589e
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer = \u9078\u64c7\u529f\u80fd\u53ea\u5728\u4e00\u500b\u5c64
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only = \u9078\u64c7\u529f\u80fd\u53ea
+#T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute = Source\u5c6c\u6027
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute = \u76ee\u6a19\u5c6c\u6027
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = \u6df7\u5408\u7dda\u8def
