@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-01-02 mmichaud <michael.michaud@free.fr>
+  * AutoAssignAttributePlugIn : can copy from an attribute if attrite count > 1
+    instead of 2 so that one can copy geometry attribute to a string attribute
+
 2012-01-01 Matthias Scholz <ms@jammerhund.de>
   * first version of a new zoom/pan tool SuperZoomPanTool
   * actualy not for use and not activated yet
